k8s/rso-image-upload-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rso-image-upload-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rso-image-upload
  template:
    metadata:
      labels:
        app: rso-image-upload
    spec:
      containers:
        - image: armkom/rso-image-upload-api:1.0.0-SNAPSHOT-8.1
          name: rso-image-upload
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: rso-image-upload
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: rso-image-upload
