k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: proxy-ingress
  annotations:
    ingress.kubernetes.io/enable-cors: "true"
spec:
  backend:
    serviceName: rso-image-upload
    servicePort: 8080
  rules:
    - http:
        paths:
          - path: /v1/images
            backend:
              serviceName: rso-image-upload
              servicePort: 8080
          - path: /v1/images/*
            backend:
              serviceName: rso-image-upload
              servicePort: 8080
          - path: /v1/content-models
            backend:
              serviceName: rso-content-model
              servicePort: 8080
          - path: /v1/content-models/*
            backend:
              serviceName: rso-content-model
              servicePort: 8080
